--- a/WindowsForm/WindowsForm/WindowsForm.csproj
+++ b/WindowsForm/WindowsForm/WindowsForm.csproj
@@ -61,53 +61,71 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Accueil.cs">
+    <Compile Include="Forms\Accueil.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Accueil.Designer.cs">
+    <Compile Include="Forms\Accueil.Designer.cs">
       <DependentUpon>Accueil.cs</DependentUpon>
     </Compile>
-    <Compile Include="Authentification.cs">
+    <Compile Include="Forms\AjoutUtilisateur.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Authentification.Designer.cs">
+    <Compile Include="Forms\AjoutUtilisateur.Designer.cs">
+      <DependentUpon>AjoutUtilisateur.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Authentification.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Authentification.Designer.cs">
       <DependentUpon>Authentification.cs</DependentUpon>
     </Compile>
-    <Compile Include="Classement.cs">
+    <Compile Include="Forms\Classement.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Classement.Designer.cs">
+    <Compile Include="Forms\Classement.Designer.cs">
       <DependentUpon>Classement.cs</DependentUpon>
     </Compile>
-    <Compile Include="Information.cs">
+    <Compile Include="Forms\Information.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Information.Designer.cs">
+    <Compile Include="Forms\Information.Designer.cs">
       <DependentUpon>Information.cs</DependentUpon>
     </Compile>
-    <Compile Include="Inscription.cs">
+    <Compile Include="Forms\Inscription.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Inscription.Designer.cs">
+    <Compile Include="Forms\Inscription.Designer.cs">
       <DependentUpon>Inscription.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\ListeMot.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ListeMot.Designer.cs">
+      <DependentUpon>ListeMot.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utilisateur.cs" />
-    <EmbeddedResource Include="Accueil.resx">
+    <Compile Include="Class gestion\Utilisateur.cs" />
+    <EmbeddedResource Include="Forms\Accueil.resx">
       <DependentUpon>Accueil.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Authentification.resx">
+    <EmbeddedResource Include="Forms\AjoutUtilisateur.resx">
+      <DependentUpon>AjoutUtilisateur.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Authentification.resx">
       <DependentUpon>Authentification.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Classement.resx">
+    <EmbeddedResource Include="Forms\Classement.resx">
       <DependentUpon>Classement.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Information.resx">
+    <EmbeddedResource Include="Forms\Information.resx">
       <DependentUpon>Information.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Inscription.resx">
+    <EmbeddedResource Include="Forms\Inscription.resx">
       <DependentUpon>Inscription.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ListeMot.resx">
+      <DependentUpon>ListeMot.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -142,6 +160,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Class jeux\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
