--- a/WindowsForm/WindowsForm/WindowsForm.csproj
+++ b/WindowsForm/WindowsForm/WindowsForm.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Class jeux\Nom.cs" />
     <Compile Include="Class jeux\Phrase.cs" />
     <Compile Include="Class jeux\Pronom.cs" />
+    <Compile Include="Class jeux\Question.cs" />
     <Compile Include="Class jeux\Verbe.cs" />
     <Compile Include="Forms\Accueil.cs">
       <SubType>Form</SubType>
@@ -179,6 +180,8 @@
       <DependentUpon>BdMotDataSet1.xsd</DependentUpon>
     </None>
     <None Include="ClassDiagram1.cd" />
+    <None Include="ClassDiagram2.cd" />
+    <None Include="ClassDiagram3.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -190,7 +193,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
